QA-4929: created SecurityControllerAdvise, ServletRequestVariableExpression; updated orm.xml; changed queries; clean code